# RL-CLINIKCAL-TRIAL

./: .dockerignore  .gitignore  Dockerfile  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README.md  SUBMISSION_CHECKLIST.md  agent.py  api.py  app.py  env.py  grader.py  graders.py  inference.py  llm_client.py  main.py  openenv.yaml  pyproject.toml  qa_openenv_api.py  requirements.txt  tasks.py  validate_graders.py  validate_openenv.py
server/: app.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  app.py  index.css
