[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-trial-rl"
version = "1.0.0"
description = "Clinical trial patient-trial matching RL environment with OpenEnv-compatible API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "DINO-17" }
]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.2",
  "requests==2.32.3",
  "openai==1.75.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = [
  "agent",
  "api",
  "app",
  "env",
  "grader",
  "graders",
  "inference",
  "llm_client",
  "main",
  "tasks",
  "validate_graders",
  "validate_openenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
